// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedProduct component it renders properly 1`] = `
<div
  className="bg-white p-5 text-center"
>
  <p
    className="font-secondary font-normal text-black text-base uppercase font-bold"
  >
    American Force Battery CC
    ...
  </p>
  <div
    className="my-10 max-h-150px"
  >
    <img
      alt=""
      className="w-full h-full"
      src="https://wordpress.standoutspecialties.local/wp-content/uploads/2020/06/CK17-3016-5x500-SF.jpg"
    />
  </div>
  <a
    href="/product/ck17-3016-5x500-sf-american-force-battery-cc-ck17-30x16-5x5-3219"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <button
      className="font-secondary font-bold py-2 px-5 uppercase disabled:opacity-75 disabled:cursor-not-allowed focus:outline-none text-base text-red-100 hover:text-red-200 bg-transparent border-solid border-2 border-red-100 hover:border-red-200"
      type="button"
    >
      Show More
    </button>
  </a>
</div>
`;

exports[`FeaturedProduct component it renders properly when className is provided 1`] = `
<div
  className="bg-white p-5 text-center hello-there"
>
  <p
    className="font-secondary font-normal text-black text-base uppercase font-bold"
  >
    American Force Battery CC
    ...
  </p>
  <div
    className="my-10 max-h-150px"
  >
    <img
      alt=""
      className="w-full h-full"
      src="https://wordpress.standoutspecialties.local/wp-content/uploads/2020/06/CK17-3016-5x500-SF.jpg"
    />
  </div>
  <a
    href="/product/ck17-3016-5x500-sf-american-force-battery-cc-ck17-30x16-5x5-3219"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <button
      className="font-secondary font-bold py-2 px-5 uppercase disabled:opacity-75 disabled:cursor-not-allowed focus:outline-none text-base text-red-100 hover:text-red-200 bg-transparent border-solid border-2 border-red-100 hover:border-red-200"
      type="button"
    >
      Show More
    </button>
  </a>
</div>
`;
